<resources>
    <string name="app_name">Openstack mobile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Openstack mobile</string>
    <string name="instancesSection">Instances</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Connect</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="services">Services</string>
    <string name="type">type</string>
    <string name="region">region</string>
    <string name="name">name</string>
    <string name="status">status</string>
    <string name="host">host</string>
    <string name="flavors">Flavors</string>
    <string name="flavor_name">Name</string>
    <string name="flavor_vcpu">VCPUs</string>
    <string name="flavor_size">Disk (in GB)</string>
    <string name="flavor_ram">RAM (in MB)</string>
    <string name="subnets">Subnets</string>
    <string name="images">Images</string>
    <string name="networks">Networks</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="register_now">Register Now</string>
</resources>
