<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.petrique.openstack.InstancesFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="126dp"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:clickable="true"
        android:elevation="100dp"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/window_bg">

        <RelativeLayout
            android:id="@+id/layoutInstances"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:background="@color/colorAccent">
                <!--android:layout_alignBottom="@+id/url"-->


                <ImageView
                    android:id="@+id/instances_icon"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_gravity="center_vertical"
                    android:padding="12dp"
                    android:src="@drawable/about" />
            </LinearLayout>

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp"
                android:layout_toEndOf="@+id/linearLayout3"
                android:maxWidth="250dp"
                android:paddingStart="5dp"
                android:paddingBottom="5dp"
                android:text="@string/name"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/abc_text_size_large_material" />

            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="5dp"
                android:paddingEnd="5dp"
                android:paddingBottom="5dp"
                android:text="@string/status"
                android:textColor="@android:color/white"
                android:textSize="@dimen/abc_text_size_small_material" />

            <TextView
                android:id="@+id/emptyRouter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/type"
                android:layout_alignParentEnd="true"
                android:paddingEnd="5dp"
                android:paddingBottom="5dp"
                android:text=""
                android:textColor="@android:color/white"
                android:textSize="@dimen/abc_text_size_small_material" />

            <TextView
                android:id="@+id/region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emptyRouter"
                android:layout_alignParentEnd="true"
                android:paddingEnd="5dp"
                android:layout_marginEnd="5dp"
                android:paddingBottom="5dp"
                android:text="@string/host"
                android:textColor="@android:color/white"
                android:textSize="@dimen/abc_text_size_small_material" />

            <RelativeLayout
                android:id="@+id/expandedInstances"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/start_buttonInstances"
                    android:layout_width="@dimen/diameter_small"
                    android:layout_height="@dimen/diameter_small"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/fab_selector"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@android:drawable/ic_media_play"
                    android:stateListAnimator="@drawable/button_elevation"
                    android:tint="@android:color/white" />

                <ImageButton
                    android:id="@+id/pause_buttonInstances"
                    android:layout_width="@dimen/diameter_small"
                    android:layout_height="@dimen/diameter_small"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@+id/start_buttonInstances"
                    android:background="@drawable/fab_selector"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@android:drawable/ic_media_pause"
                    android:stateListAnimator="@drawable/button_elevation"
                    android:tint="@android:color/white" />


                <ImageButton
                    android:id="@+id/stop_buttonInstances"
                    android:layout_width="@dimen/diameter_small"
                    android:layout_height="@dimen/diameter_small"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@+id/pause_buttonInstances"
                    android:background="@drawable/fab_selector"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@android:drawable/ic_lock_power_off"
                    android:stateListAnimator="@drawable/button_elevation"
                    android:tint="@android:color/white" />


            </RelativeLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>