<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.petrique.openstack.FlavorsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/flavorsCV"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="1dp"
        android:elevation="100dp"
        app:cardBackgroundColor="@color/colorAccentRed">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/flavorsTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/flavors"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/title"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="44dp"
                android:layout_height="@dimen/abc_action_button_min_height_material"
                android:layout_alignEnd="@id/flavorsTV"
                android:background="@color/cardview_light_background">

                <ImageView
                    android:id="@+id/endpoint_icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:padding="2dp"
                    android:src="@drawable/ic_view_carousel_black_48dp" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <!--
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_instances"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/flavorsCV"
        android:clickable="true"
        android:focusable="true"
        android:scrollbars="vertical" />
    -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="false"
        android:alpha="0.1"
        android:src="@drawable/openstack_logo" />

    <TableLayout
        android:id="@+id/table_flavours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/flavorsCV"
        android:background="@color/colorAccentRed"
        android:layout_marginVertical="@dimen/activity_vertical_margin">

        <TableRow
            android:background="@color/colorPrimaryDark"
            android:layout_marginBottom="2dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flavor_name"
                android:layout_marginRight="2dp"
                android:textColor="@color/colorBackgroundGrayVeryLightGray"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flavor_vcpu"
                android:layout_marginRight="2dp"
                android:textColor="@color/colorBackgroundGrayVeryLightGray"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flavor_size"
                android:layout_marginRight="2dp"
                android:textColor="@color/colorBackgroundGrayVeryLightGray"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flavor_ram"
                android:textColor="@color/colorBackgroundGrayVeryLightGray"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_weight="1"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:background="@color/colorBackgroundGrayVeryLightGray">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="m1.tiny"
                android:layout_margin="2dp"
                android:layout_marginTop="3dp"
                android:textStyle="bold"
                android:textSize="@dimen/table_cell_size"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="1"
                android:layout_margin="2dp"
                android:layout_marginTop="3dp"
                android:textStyle="bold"
                android:textSize="@dimen/table_cell_size"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="1"
                android:layout_margin="2dp"
                android:textSize="@dimen/table_cell_size"
                android:layout_marginTop="3dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="512"
                android:textSize="@dimen/table_cell_size"
                android:layout_margin="2dp"
                android:layout_marginTop="3dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:background="@color/colorLight">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:textSize="@dimen/table_cell_size"
                android:text="m1.small"
                android:layout_marginRight="2dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="1"
                android:textSize="@dimen/table_cell_size"
                android:layout_marginRight="2dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="20"
                android:textSize="@dimen/table_cell_size"
                android:layout_marginRight="2dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="2048"
                android:layout_marginRight="2dp"
                android:textSize="@dimen/table_cell_size"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:background="@color/colorBackgroundGrayVeryLightGray">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="m1.medium"
                android:textSize="@dimen/table_cell_size"
                android:layout_marginRight="2dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="2"
                android:textSize="@dimen/table_cell_size"
                android:layout_marginRight="2dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="40"
                android:layout_marginRight="2dp"
                android:textSize="@dimen/table_cell_size"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="4096"
                android:layout_marginRight="2dp"
                android:textSize="@dimen/table_cell_size"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:background="@color/colorLight">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="m1.large"
                android:layout_marginRight="2dp"
                android:textSize="@dimen/table_cell_size"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="4"
                android:layout_marginRight="2dp"
                android:textSize="@dimen/table_cell_size"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="80"
                android:layout_marginRight="2dp"
                android:textSize="@dimen/table_cell_size"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="8192"
                android:layout_marginRight="2dp"
                android:textSize="@dimen/table_cell_size"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:background="@color/colorBackgroundGrayVeryLightGray">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="m1.xlarge"
                android:layout_marginRight="2dp"
                android:textSize="@dimen/table_cell_size"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="8"
                android:layout_marginRight="2dp"
                android:textSize="@dimen/table_cell_size"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="160"
                android:layout_marginRight="2dp"
                android:textSize="@dimen/table_cell_size"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="16384"
                android:textSize="@dimen/table_cell_size"
                android:layout_marginRight="2dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"/>
        </TableRow>

    </TableLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="67dp"
        android:layout_height="64dp"
        android:layout_below="@+id/table_flavours"
        android:layout_marginTop="15dp"
        app:srcCompat="@android:drawable/ic_input_add" />

</RelativeLayout>

